Fixed a minor spacing isse

--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,7 @@ a li {
 
 .portfolio-piece {
     width: 100%;
+    height: 100%;
     color: #fff;
     
     transition: opacity 0.2s ease-in-out;
@@ -193,6 +194,7 @@ h6 {
 
 .contact {
     padding: 10em 0;
+    margin-top: -0.2em;
     background-color: #222;
     position: relative;
 }
